@@ -1527,24 +1527,30 @@ int recompute_envelope(int v)
 			envelope_width = sustain_time * play_mode->rate
 					 / (1000.0f * (double)control_ratio);
 
-			vp->envelope_target = 0;
-			new_rate = vp->envelope_volume / envelope_width;
-
-			/* Use the Release1 rate if slower than new rate */
-			if (vp->sample->envelope_rate[EG_GUS_RELEASE1] &&
-			    vp->sample->envelope_rate[EG_GUS_RELEASE1] < new_rate)
-			        new_rate = vp->sample->envelope_rate[EG_GUS_RELEASE1];
-
-			/* Use the Sustain rate if slower than new rate */
-			if (vp->sample->envelope_rate[EG_GUS_SUSTAIN] &&
-			    vp->sample->envelope_rate[EG_GUS_SUSTAIN] < new_rate)
-			        new_rate = vp->sample->envelope_rate[EG_GUS_SUSTAIN];
-
-			/* Avoid freezing */
-			if (!new_rate)
-				new_rate = 1;
-			
-			vp->envelope_increment = -new_rate;
+			if (vp->sample->inst_type == INST_SF2) {
+				/* If the instrument is SoundFont, it sustains at the sustain stage. */
+				vp->envelope_increment = -1;
+				vp->envelope_target = vp->envelope_volume - envelope_width;
+				if (vp->envelope_target < 0) {vp->envelope_target = 0;}
+			} else {
+				/* Otherwise, it decays at the sustain stage. */
+				vp->envelope_target = 0;
+				new_rate = vp->envelope_volume / envelope_width;
+				/* Use the Release1 rate if slower than new rate */
+				if (vp->sample->envelope_rate[EG_GUS_RELEASE1] &&
+					vp->sample->envelope_rate[EG_GUS_RELEASE1] < new_rate)
+						new_rate = vp->sample->envelope_rate[EG_GUS_RELEASE1];
+				/* Use the Sustain rate if slower than new rate */
+				/* (Sustain rate exists only in GUS patches) */
+				if (vp->sample->inst_type == INST_GUS &&
+					vp->sample->envelope_rate[EG_GUS_SUSTAIN] &&
+					vp->sample->envelope_rate[EG_GUS_SUSTAIN] < new_rate)
+						new_rate = vp->sample->envelope_rate[EG_GUS_SUSTAIN];
+				/* Avoid freezing */
+				if (!new_rate)
+					new_rate = 1;
+				vp->envelope_increment = -new_rate;
+			}
 		}
 		return 0;
 	}
@@ -1919,18 +1925,15 @@ int recompute_modulation_envelope(int v)
 		return 1;
 	}
 
-	/* Routine to decay the sustain envelope
+	/* Routine to sustain modulation envelope
 	 *
 	 * Disabled if !min_sustain_time.
 	 * min_sustain_time is given in msec, and is the minimum
-	 *  time it will take to decay a note to zero.
+	 *  time it will take to sustain a note.
 	 * 2000-3000 msec seem to be decent values to use.
 	 */
 	if (stage == EG_GUS_RELEASE1 && vp->sample->modes & MODES_ENVELOPE
 	    && vp->status & (VOICE_ON | VOICE_SUSTAINED)) {
-
-		int32 new_rate;
-			
 		ch = vp->channel;
 
 		/* Don't adjust the current rate if VOICE_ON */
@@ -1960,25 +1963,9 @@ int recompute_modulation_envelope(int v)
 			/* Calculate the width of the envelope */
 			modenv_width = sustain_time * play_mode->rate
 				       / (1000.0f * (double)control_ratio);
-
-			vp->modenv_target = 0;
-			new_rate = vp->modenv_volume / modenv_width;
-
-			/* Use the Release1 rate if slower than new rate */
-			if (vp->sample->envelope_rate[EG_GUS_RELEASE1] &&
-			    vp->sample->envelope_rate[EG_GUS_RELEASE1] < new_rate)
-			        new_rate = vp->sample->envelope_rate[EG_GUS_RELEASE1];
-
-			/* Use the Sustain rate if slower than new rate */
-			if (vp->sample->envelope_rate[EG_GUS_SUSTAIN] &&
-			    vp->sample->envelope_rate[EG_GUS_SUSTAIN] < new_rate)
-			        new_rate = vp->sample->envelope_rate[EG_GUS_SUSTAIN];
-
-			/* Avoid freezing */
-			if (!new_rate)
-				new_rate = 1;
-			
-			vp->modenv_increment = -new_rate;
+			vp->modenv_increment = -1;
+			vp->modenv_target = vp->modenv_volume - modenv_width;
+			if (vp->modenv_target < 0) {vp->modenv_target = 0;}
 		}
 		return 0;
 	}
